--- a/index.html
+++ b/index.html
@@ -1,25 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CricBrawl</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-<link rel="stylesheet" href="css/animate.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="style.css"/>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-<!-- Font Google -->
-<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Favicon -->
-<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-<link rel="manifest" href="images/favicon/site.webmanifest">
-<link rel="shortcut icon" href="images/favicon/favicon.ico">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="images/favicon/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>CricBrawl</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <!-- Font Google -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="images/favicon/site.webmanifest">
+  <link rel="shortcut icon" href="images/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="images/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+		emailjs.init('QukYp0RtiY2XF_HSk')
+	</script>
+  <script>
+    function sendEmail() {
+    event.preventDefault()
+    const messageForm = document.querySelector(".contact_form");
+    const messageOk = document.querySelector(".message-ok");
+
+    const serviceID = "service_lyd61c8";
+    const templateID = "template_v9h6qxp";
+    const form = document.getElementById("contact_form");
+
+    emailjs.sendForm(serviceID, templateID, form)
+      .then(() => {
+        messageForm.classList.add("invisible");
+        messageOk.classList.remove("invisible");
+      }, (err) => {
+        console.error(`Error Sending message ${JSON.stringify(err)}`);
+      });
+    
+}
+  </script> 
 </head>
 
 <body>
@@ -246,20 +272,26 @@
         </div>
         <div class="section-content">
           <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-8">
+            <div class="col-sm-12 col-md-12 col-lg-8 contact_form">
               <form id="contact_form" action="">
                 <div class="row">
                   <div class="col">
-                    <input type="text" id="your_name" class="form-input w-100" name="full-name" placeholder="Full Name" required>
+                    <input type="text" id="from_name" class="form-input w-100" name="full-name" placeholder="Full Name" required>
                   </div>
                   <div class="col">
-                    <input type="email" id="email" class="form-input w-100" name="email" placeholder="Email" required>
+                    <input type="email" id="reply_to" class="form-input w-100" name="email" placeholder="Email" required>
                   </div>
+                </div>
+                <div class="field input">
+                  <input id="to_name" name="to_name" type="hidden" value="CricBrawl Team">
                 </div>
                 <input type="text" id="subject" class="form-input w-100" name="subject" placeholder="Subject">
                 <textarea class="form-input w-100" id="message" placeholder="Message" name="message"></textarea>
-                <button class="btn-grad w-100 text-uppercase" type="submit" name="button">submit</button>
+                <button class="btn-grad w-100 text-uppercase" type="submit" name="button" onclick="sendEmail()">submit</button>
               </form>
+            </div>
+            <div>
+              <p class="message-ok invisible">Your message has been sent, thank you.</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4">
               <div class="contact-info white">
