Fix alignment issue

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
         </div>
         <div class="section-content">
           <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-8 contact_form">
-              <form id="contact_form" action="">
+            <div class="col-sm-12 col-md-12 col-lg-8 ">
+              <form id="contact_form" class="contact_form" action="">
                 <div class="row">
                   <div class="col">
                     <input type="text" id="from_name" class="form-input w-100" name="full-name" placeholder="Full Name" required>
@@ -288,10 +288,10 @@
                 <input type="text" id="subject" class="form-input w-100" name="subject" placeholder="Subject">
                 <textarea class="form-input w-100" id="message" placeholder="Message" name="message"></textarea>
                 <button class="btn-grad w-100 text-uppercase" type="submit" name="button" onclick="sendEmail()">submit</button>
-              </form>
-            </div>
-            <div>
-              <p class="message-ok invisible">Your message has been sent, thank you.</p>
+              </form>  
+              <div>
+                <p class="message-ok invisible">Your message has been sent, thank you.</p>
+              </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4">
               <div class="contact-info white">
