Updated footer design

--- a/index.html
+++ b/index.html
@@ -356,14 +356,55 @@
 <!-------Download End------->
 
 <footer class="footer-copy">
-  <div class="container-fluid">
+  <div class="container pt-5 ">
+    <div class="row border-bottom">
+      <div class="col-md-3 col-sm-12 mb-3 text-center">
+        <img src="images/logo-light.svg" width="200px" height="60px" class="img-fluid" alt="logo">
+        
+      </div>
+      <div class="col-md-9 col-sm-12">
+
+        <div class="col-md-3 col-sm-6 col-6 p-0 float-left mb-3">
+          <h6 class="mb-4 font-weight-bold text-uppercase">Learn more</h6>
+        <ul class="list-group">
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">How To Play</a></li>
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Fantasy Points</a></li>
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">FAQs</a></li>
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Terms and Conditions</a></li>
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Privacy Policy</a></li>
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Apps</a></li>
+        </ul>
+        </div>
+
+
+        <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left">
+          <h6 class="mb-4 font-weight-bold text-uppercase">Connect</h6>
+        <ul class="list-group">
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+            <a href="https://twitter.com/cricbrawl"><i class="fa fa-twitter mr-1"></i> Twitter</a>       
+          </li class="list-group-item bg-transparent border-0 p-0 mb-2">
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+            <a href="https://www.instagram.com/cricbrawl/" target="_blank"><i class="fa fa-instagram mr-1"></i> Instagram</a>  
+          </li>
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+            <a href="https://www.facebook.com/profile.php?id=61557898962679" target="_blank"><i class="fa fa-facebook mr-1"></i> Facebook</a>
+          </li>
+        </ul>
+        </div>
+
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-12">
-        <p>2024 &copy; CricBrawl. Website Designed by <a href="http://w3Template.com" target="_blank" rel="dofollow">W3 Template</a></p>
+        <p>2024 &copy; CricBrawl. All rights reserved.</p>
       </div>
     </div>
   </div>
+    
 </footer>
+<!-- <footer class="footer-copy">
+  
+</footer> -->
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
