Added youtube and linkedin

--- a/index.html
+++ b/index.html
@@ -385,7 +385,13 @@
             <a href="https://twitter.com/cricbrawl"><i class="fa fa-twitter mr-1"></i> Twitter</a>       
           </li class="list-group-item bg-transparent border-0 p-0 mb-2">
           <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+            <a href="https://www.linkedin.com/company/cricbrawl" target="_blank"><i class="fa fa-facebook mr-1"></i> LinkedIn</a>
+          </li>
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2">
             <a href="https://www.instagram.com/cricbrawl/" target="_blank"><i class="fa fa-instagram mr-1"></i> Instagram</a>  
+          </li>
+          <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+            <a href="https://www.youtube.com/@cricbrawl" target="_blank"><i class="fa fa-youtube mr-1"></i> YouTube</a>
           </li>
           <li class="list-group-item bg-transparent border-0 p-0 mb-2">
             <a href="https://www.facebook.com/profile.php?id=61557898962679" target="_blank"><i class="fa fa-facebook mr-1"></i> Facebook</a>
