--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="" data-scroll-nav="0">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">About</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="2">Features</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="5">Faq</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="6">Contact</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#about" data-scroll-nav="1">About</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#features" data-scroll-nav="2">Features</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#faq" data-scroll-nav="5">Faq</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#contact" data-scroll-nav="6">Contact</a> </li>
         </ul>
       </div>
     </div>
@@ -101,7 +101,7 @@
 
   <!-------About Start------->
 
-  <section class="about section-padding prelative" data-scroll-index='1'>
+  <section id="about" class="about section-padding prelative" data-scroll-index='1'>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -148,7 +148,7 @@
   <!-------About End------->
 
   <!-------Video Start------->
-  <section class="video-section prelative text-center white">
+  <section id="video" class="video-section prelative text-center white">
     <div class="section-padding video-overlay">
       <div class="container">
         <h3>How To Play</h3>
@@ -166,7 +166,7 @@
   <!-------Video End------->
 
   <!-------Features Start------->
-  <section class="feature section-padding" data-scroll-index='2'>
+  <section id="features" class="feature section-padding" data-scroll-index='2'>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -250,7 +250,7 @@
   <!-------Features End------->
 
   <!-------FAQ Start------->
-  <section class="faq section-padding prelative" data-scroll-index='5'>
+  <section id="faq" class="faq section-padding prelative" data-scroll-index='5'>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -306,7 +306,7 @@
   <!-------FAQ End------->
 
   <!-------Contact Start------->
-  <section class="contact section-padding" data-scroll-index='6'>
+  <section id="contact" class="contact section-padding" data-scroll-index='6'>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -408,7 +408,7 @@
   <!-------Download End------->
 
   <!----------Footer---------->
-  <footer class="footer-copy">
+  <footer id="footer" class="footer-copy">
     <div class="container pt-5 ">
       <div class="row border-bottom">
         <div class="col-md-3 col-sm-12 mb-3 text-center">
@@ -424,9 +424,9 @@
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/fantasy-points.html">Fantasy
                   Points</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">FAQs</a></li>
-              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Terms and Conditions</a></li>
+              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/terms.html">Terms and
+                  Conditions</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Privacy Policy</a></li>
-              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Apps</a></li>
             </ul>
           </div>
 
