--- a/pages/fantasy-points.html
+++ b/pages/fantasy-points.html
@@ -38,11 +38,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"> <a class="nav-link" href="../index.html" data-scroll-nav="0">Home</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="../index.html" data-scroll-nav="1">About</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="../index.html" data-scroll-nav="2">Features</a>
+                    <li class="nav-item"> <a class="nav-link" href="../index.html#about" data-scroll-nav="1">About</a>
                     </li>
-                    <li class="nav-item"> <a class="nav-link" href="../index.html" data-scroll-nav="5">Faq</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="../index.html" data-scroll-nav="6">Contact</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="../index.html#features"
+                            data-scroll-nav="2">Features</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="../index.html#faq" data-scroll-nav="5">Faq</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="../index.html#contact"
+                            data-scroll-nav="6">Contact</a> </li>
                 </ul>
             </div>
         </div>
@@ -50,7 +52,11 @@
     <!-- End Navbar -->
     <section class="extra-content" data-scroll-index='0'>
         <div class="container">
-            <h3>Fantasy Points for Batting</h3>
+            <div class="sectioner-header text-center">
+                <h3>Fantasy Points Guide</h3>
+                <span class="line"></span>
+            </div>
+            <h4>Fantasy Points for Batting</h4>
             <p>The key metric for batting is &#8220;Runs&#8221;. The secondary metric is &#8220;Strike Rate&#8221;.
                 Calculations are done accordingly.</p>
             <p>
@@ -91,7 +97,7 @@
                 <li>+6 points if Strike Rate is more than 170</li>
             </ul>
             <br />
-            <h3>Fantasy Points for Bowling</h3>
+            <h4>Fantasy Points for Bowling</h4>
             <p>The primary metric for bowlers is naturally Wickets &#8211; but Maiden overs are also an important
                 side metric. The secondary metric for bowlers is the Economy Rate.</p>
             <p>
@@ -132,7 +138,7 @@
                 </li>
             </ul>
             <br />
-            <h3>Points for Catching / Fielding</h3>
+            <h4>Points for Catching / Fielding</h4>
             <p>Catching is limited to non-bowler Catches (catch-and-bowled is separate from Catches). There are 3
                 metrics here, of them Catches are the key metric and the other two secondary.</p>
             <p>
@@ -174,12 +180,11 @@
                                     href="fantasy-points.html">Fantasy
                                     Points</a></li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">FAQs</a></li>
-                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Terms and
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="terms.html">Terms and
                                     Conditions</a>
                             </li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Privacy Policy</a>
                             </li>
-                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Apps</a></li>
                         </ul>
                     </div>
 
