Added Privacy Policy

--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>CricBrawl - Fantasy Points Guide</title>
+    <title>CricBrawl - Privacy Policy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -30,7 +30,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg nav-scroll">
-        <div class="container"> <a class="navbar-brand navbar-logo" href="../index.html"> <img
+        <div class="container"> <a class="navbar-brand navbar-logo" href="index.html"> <img
                     src="../images/logo-light.svg" width="120" height="60" alt="logo" class="logo-1"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span
@@ -53,113 +53,113 @@
     <section class="extra-content" data-scroll-index='0'>
         <div class="container">
             <div class="sectioner-header text-center">
-                <h3>Fantasy Points Guide</h3>
+                <h3>Privacy Policy</h3>
                 <span class="line"></span>
+
             </div>
-            <h4>Fantasy Points for Batting</h4>
-            <p>The key metric for batting is &#8220;Runs&#8221;. The secondary metric is &#8220;Strike Rate&#8221;.
-                Calculations are done accordingly.</p>
-            <p>
-                <strong>Key metric (Runs) points:</strong>
+            <p style="font-weight: 600">At CricBrawl, we are committed to protecting your privacy and safeguarding your
+                personal information. This Privacy
+                Policy outlines how we collect, use, and protect the information you provide to us when using our
+                website, mobile
+                application, and other services offered by CricBrawl. By using our platform, you consent to the
+                practices described in
+                this Privacy Policy.
+
+            </p>
+            <h4>Scope of the Privacy Policy</h4>
+            <p>This Privacy Policy applies to all information collected by CricBrawl from users of our website, mobile
+                application, and
+                other services. It does not apply to information collected by CricBrawl through other means.</p>
+
+            <h4>Information We Collect</h4>
+            <p>CricBrawl may collect both personal and non-personal information from users in various ways, including:
             </p>
             <ul class="list-spacing">
-                <li>+1 point PER run</li>
-                <li>+1 point PER four</li>
-                <li>+2 points PER six</li>
-                <li>
-                    <span style="color: #800000;">-2 points if dismissed for a 0</span>
-                </li>
+                <li>Information provided by users during registration or account setup, such as name, email address,
+                    mailing
+                    address, phone
+                    number, and other relevant details.</li>
+                <li>Information collected automatically when users interact with our platform, including IP address,
+                    device
+                    information,
+                    browser type, and usage data.</li>
+                <li>Information obtained from third-party sources or through third-party integrations, where permitted
+                    by
+                    law.</li>
+                <li>We collect this information for purposes such as providing and improving our services, personalizing
+                    user experiences,
+                    communicating with users, and ensuring the security of our platform.</li>
             </ul>
-            <p>
-                <strong>Bonus Points</strong>
-            </p>
+
+            <h4>Use of Information</h4>
+            <p>CricBrawl uses the information collected for various purposes, including but not limited to:</p>
             <ul class="list-spacing">
-                <li>+4 bonus points for scoring 30 runs</li>
-                <li>+4 bonus points for a half-century</li>
-                <li>+8 bonus points for a century</li>
+                <li>Providing, maintaining, and improving our services.</li>
+                <li>Personalizing user experiences and content.</li>
+                <li>Communicating with users about their accounts, transactions, and promotions.</li>
+                <li>Sending marketing communications, newsletters, and promotional offers.</li>
+                <li>Analyzing user preferences, trends, and behavior to enhance our services.</li>
+                <li>Complying with legal and regulatory requirements.</li>
             </ul>
-            <p>
-                <strong>Secondary metric (Strike Rate) points:</strong>
+
+            <h4>Third-Party Links and Advertising</h4>
+            <p>Our platform may contain links to third-party websites or services, and we may use third-party
+                advertising partners to
+                display advertisements. These third-party websites and services have their own privacy policies, and we
+                are not
+                responsible for their practices. Users should review the privacy policies of these third parties before
+                providing any
+                personal information.
             </p>
-            <ul class="list-spacing">
-                <li>
-                    <span style="color: #800000;">-6 points if Strike Rate is below 50</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-4 points if Strike Rate is between 50 &#8211; 50.99</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-2 points if Strike Rate is between 60 &#8211; 70</span>
-                </li>
-                <li>0 points if Strike Rate is between 70-130</li>
-                <li>+2 points if Strike Rate is between 130-150</li>
-                <li>+4 points if Strike Rate is between 150.01-170</li>
-                <li>+6 points if Strike Rate is more than 170</li>
-            </ul>
+
+            <h4>Data Security</h4>
+            <p>CricBrawl employs physical, electronic, and managerial measures to protect the confidentiality,
+                integrity, and security
+                of user information. We use encryption, firewalls, access controls, and other security technologies to
+                safeguard user
+                data against unauthorized access, disclosure, alteration, or destruction.</p>
+
+            <h4>Children's Privacy</h4>
+            <p>Our Platform is not intended for children under the age of 18, and we do not knowingly collect personal
+                information from
+                children. If you are a parent or guardian and believe that your child has provided us with personal
+                information, please
+                contact us to request deletion of the information.
+            </p>
+
+            <h4>Access from Outside the US</h4>
+            <p>While our services are primarily intended for users in the United States, personal and non-personal data
+                may be
+                transferred to, stored in, and processed in other countries where our service providers are located. By
+                using our
+                services, you consent to the transfer and processing of your information as described in this Privacy
+                Policy.</p>
+
+            <h4>Tax and Regulatory Filing</h4>
+            <p>In certain circumstances, such as when users withdraw funds or have winnings in excess of required
+                thresholds, we may
+                require users to provide additional information, including social security numbers, for identity
+                verification and tax
+                purposes. We handle this information in accordance with applicable laws and regulations. </p>
+
+            <h4>Revisions to the Privacy Policy</h4>
+            <p>CricBrawl reserves the right to update or revise this Privacy Policy periodically. We will notify users
+                of
+                any material
+                changes to this Privacy Policy by posting the updated version on our platform or by other means as
+                required
+                by law.
+                Users are encouraged to review this Privacy Policy regularly to stay informed about our data practices.
+            </p>
+
+            <h4>Contact Information</h4>
+            <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the handling of your
+                personal
+                information, please contact us at info@cricbrawl.com.</p>
             <br />
-            <h4>Fantasy Points for Bowling</h4>
-            <p>The primary metric for bowlers is naturally Wickets &#8211; but Maiden overs are also an important
-                side metric. The secondary metric for bowlers is the Economy Rate.</p>
-            <p>
-                <strong>Key metric (Wickets) and side metric (Maidens)</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+12 points per maiden over</li>
-                <li>+20 points PER wicket</li>
-                <li>-2 points PER wide</li>
-                <li>-2 points PER no ball</li>
-            </ul>
-            <p>
-                <strong>Bonus Points</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+4 bonus points for taking three wickets in a single match</li>
-                <li>+4 bonus points for taking four wickets in a single match (Total 8)</li>
-                <li>+8 bonus points for taking five OR MORE wickets in a single match (Total 16)</li>
-            </ul>
-            <p>
-                <strong>Secondary metric (Economy Rate) points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>6 points if his economy rate is below 5 runs per over</li>
-                <li>4 points if his economy rate is between 5 &#8211; 5.99 runs per over</li>
-                <li>2 points if his economy rate is between 6 &#8211; 7 runs per over</li>
-                <li>0 points if economy rate is between 7 and 10 runs per over</li>
-                <li>
-                    <span style="color: #800000;">-2 points if his economy rate is between 10 &#8211; 11 runs per
-                        over</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-4 points if his economy rate is between 11.01 &#8211; 12 runs per
-                        over</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-6 points if his economy rate is above 12 runs per over</span>
-                </li>
-            </ul>
-            <br />
-            <h4>Points for Catching / Fielding</h4>
-            <p>Catching is limited to non-bowler Catches (catch-and-bowled is separate from Catches). There are 3
-                metrics here, of them Catches are the key metric and the other two secondary.</p>
-            <p>
-                <strong>Key metric points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+8 points PER catch</li>
-            </ul>
-            <p>
-                <strong>Bonus Points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+4 bonus points for taking three or more catches</li>
-            </ul>
-            <p>
-                <strong>Secondary Metrics:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+6 points PER run out</li>
-                <li>+6 points PER stumped</li>
-            </ul>
+            <b><i>This Privacy Policy was last updated on 04/01/2024.</i></b>
+
+
         </div>
     </section>
 
@@ -183,8 +183,7 @@
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="terms.html">Terms and
                                     Conditions</a>
                             </li>
-                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="privacy.html">Privacy
-                                    Policy</a>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Privacy Policy</a>
                             </li>
                         </ul>
                     </div>
