--- a/index.html
+++ b/index.html
@@ -426,7 +426,8 @@
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">FAQs</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/terms.html">Terms and
                   Conditions</a></li>
-              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Privacy Policy</a></li>
+              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/privacy.html">Privacy
+                  Policy</a></li>
             </ul>
           </div>
 
