--- a/pages/terms.html
+++ b/pages/terms.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>CricBrawl</title>
+    <title>CricBrawl - Terms and Conditions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -30,8 +30,8 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg nav-scroll">
-        <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="../images/logo-light.svg"
-                    width="120" height="60" alt="logo" class="logo-1"> </a>
+        <div class="container"> <a class="navbar-brand navbar-logo" href="index.html"> <img
+                    src="../images/logo-light.svg" width="120" height="60" alt="logo" class="logo-1"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span
                     class="fas fa-bars"></span> </button>
@@ -65,7 +65,7 @@
                 not agree to these
                 Terms, please do not use the Platform.
             </p>
-            <ol class="list-spacing">
+            <ol class="list-spacing terms-spacing">
                 <li><b>Acceptance of Terms</b><br />
                     By accessing or using the Platform, you acknowledge that you have read, understood, and agree to be
                     bound by
@@ -292,7 +292,8 @@
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="terms.html">Terms and
                                     Conditions</a>
                             </li>
-                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">Privacy Policy</a>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="privacy.html">Privacy
+                                    Policy</a>
                             </li>
                         </ul>
                     </div>
