Added FAQ and How to Play section

--- a/index.html
+++ b/index.html
@@ -420,10 +420,11 @@
           <div class="col-md-3 col-sm-6 col-6 p-0 float-left mb-3">
             <h6 class="mb-4 font-weight-bold text-uppercase">Learn more</h6>
             <ul class="list-group">
-              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">How To Play</a></li>
+              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/how-to-play.html">How To
+                  Play</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/fantasy-points.html">Fantasy
                   Points</a></li>
-              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">FAQs</a></li>
+              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/faq.html">FAQs</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/terms.html">Terms and
                   Conditions</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/privacy.html">Privacy
