--- a/pages/how-to-play.html
+++ b/pages/how-to-play.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>CricBrawl - Fantasy Points Guide</title>
+    <title>CricBrawl - Privacy Policy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -53,113 +53,11 @@
     <section class="extra-content" data-scroll-index='0'>
         <div class="container">
             <div class="sectioner-header text-center">
-                <h3>Fantasy Points Guide</h3>
+                <h3>How to Play</h3>
                 <span class="line"></span>
             </div>
-            <h4>Fantasy Points for Batting</h4>
-            <p>The key metric for batting is &#8220;Runs&#8221;. The secondary metric is &#8220;Strike Rate&#8221;.
-                Calculations are done accordingly.</p>
-            <p>
-                <strong>Key metric (Runs) points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+1 point PER run</li>
-                <li>+1 point PER four</li>
-                <li>+2 points PER six</li>
-                <li>
-                    <span style="color: #800000;">-2 points if dismissed for a 0</span>
-                </li>
-            </ul>
-            <p>
-                <strong>Bonus Points</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+4 bonus points for scoring 30 runs</li>
-                <li>+4 bonus points for a half-century</li>
-                <li>+8 bonus points for a century</li>
-            </ul>
-            <p>
-                <strong>Secondary metric (Strike Rate) points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>
-                    <span style="color: #800000;">-6 points if Strike Rate is below 50</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-4 points if Strike Rate is between 50 &#8211; 50.99</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-2 points if Strike Rate is between 60 &#8211; 70</span>
-                </li>
-                <li>0 points if Strike Rate is between 70-130</li>
-                <li>+2 points if Strike Rate is between 130-150</li>
-                <li>+4 points if Strike Rate is between 150.01-170</li>
-                <li>+6 points if Strike Rate is more than 170</li>
-            </ul>
-            <br />
-            <h4>Fantasy Points for Bowling</h4>
-            <p>The primary metric for bowlers is naturally Wickets &#8211; but Maiden overs are also an important
-                side metric. The secondary metric for bowlers is the Economy Rate.</p>
-            <p>
-                <strong>Key metric (Wickets) and side metric (Maidens)</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+12 points per maiden over</li>
-                <li>+20 points PER wicket</li>
-                <li>-2 points PER wide</li>
-                <li>-2 points PER no ball</li>
-            </ul>
-            <p>
-                <strong>Bonus Points</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+4 bonus points for taking three wickets in a single match</li>
-                <li>+4 bonus points for taking four wickets in a single match (Total 8)</li>
-                <li>+8 bonus points for taking five OR MORE wickets in a single match (Total 16)</li>
-            </ul>
-            <p>
-                <strong>Secondary metric (Economy Rate) points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>6 points if his economy rate is below 5 runs per over</li>
-                <li>4 points if his economy rate is between 5 &#8211; 5.99 runs per over</li>
-                <li>2 points if his economy rate is between 6 &#8211; 7 runs per over</li>
-                <li>0 points if economy rate is between 7 and 10 runs per over</li>
-                <li>
-                    <span style="color: #800000;">-2 points if his economy rate is between 10 &#8211; 11 runs per
-                        over</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-4 points if his economy rate is between 11.01 &#8211; 12 runs per
-                        over</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-6 points if his economy rate is above 12 runs per over</span>
-                </li>
-            </ul>
-            <br />
-            <h4>Points for Catching / Fielding</h4>
-            <p>Catching is limited to non-bowler Catches (catch-and-bowled is separate from Catches). There are 3
-                metrics here, of them Catches are the key metric and the other two secondary.</p>
-            <p>
-                <strong>Key metric points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+8 points PER catch</li>
-            </ul>
-            <p>
-                <strong>Bonus Points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+4 bonus points for taking three or more catches</li>
-            </ul>
-            <p>
-                <strong>Secondary Metrics:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+6 points PER run out</li>
-                <li>+6 points PER stumped</li>
-            </ul>
+
+
         </div>
     </section>
 
