--- a/pages/terms.html
+++ b/pages/terms.html
@@ -30,7 +30,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg nav-scroll">
-        <div class="container"> <a class="navbar-brand navbar-logo" href="index.html"> <img
+        <div class="container"> <a class="navbar-brand navbar-logo" href="../index.html"> <img
                     src="../images/logo-light.svg" width="120" height="60" alt="logo" class="logo-1"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span
@@ -284,11 +284,13 @@
                     <div class="col-md-3 col-sm-6 col-6 p-0 float-left mb-3">
                         <h6 class="mb-4 font-weight-bold text-uppercase">Learn more</h6>
                         <ul class="list-group">
-                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">How To Play</a></li>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="how-to-play.html">How
+                                    To Play</a></li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a
                                     href="fantasy-points.html">Fantasy
                                     Points</a></li>
-                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="">FAQs</a></li>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="faq.html">FAQs</a>
+                            </li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="terms.html">Terms and
                                     Conditions</a>
                             </li>
